manifests/prod/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: prod
  labels:
    app: api
    environment: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      environment: prod
  template:
    metadata:
      labels:
        app: api
        environment: prod
    spec:
      imagePullSecrets: 
      - name: safeops-challenge
      containers:
      - name: api
        image: registry.digitalocean.com/safeops-challenge/api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 60m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: prod
  labels:
    app: web
    environment: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      environment: prod
  template:
    metadata:
      labels:
        app: web
        environment: prod
    spec:
      imagePullSecrets: 
      - name: safeops-challenge
      containers:
      - name: web
        image: registry.digitalocean.com/safeops-challenge/web:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 60m
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: prod
spec:
  selector:
    app: api
    environment: prod
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: prod
spec:
  selector:
    app: web
    environment: prod
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
